# automation-job-board

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.sh  start.sh  stop.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: ai.py  applications.py  auth.py  deps.py  jobs.py
backend/app/models/: __init__.py  application.py  job.py  user.py
backend/app/schemas/: __init__.py  application.py  job.py  user.py
backend/app/services/: ai_service.py
backend/app/utils/: security.py
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/components/jobs/: JobCard.tsx  JobList.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: badge.tsx  button.tsx
frontend/src/hooks/: useApplications.ts  useJobs.ts
frontend/src/lib/: api.ts  auth.tsx  utils.ts
frontend/src/pages/: Dashboard.tsx  JobDetail.tsx  Jobs.tsx  Landing.tsx  Login.tsx  Register.tsx
frontend/src/types/: index.ts
